--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,22 @@
     ],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "laminas/laminas-cli": "^1.10.0",
         "laminas/laminas-component-installer": "^3.4.0",
+        "laminas/laminas-db": "^2.20.0",
         "laminas/laminas-development-mode": "^3.12.0",
+        "laminas/laminas-di": "^3.14.0",
+        "laminas/laminas-json": "^3.6.0",
         "laminas/laminas-log": "^2.17.0",
         "laminas/laminas-mvc": "^3.7.0",
-        "laminas/laminas-skeleton-installer": "^1.3.0",
-        "laminas/laminas-db": "^2.20.0",
         "laminas/laminas-mvc-form": "^2.1.0",
-        "laminas/laminas-json": "^3.6.0",
-        "laminas/laminas-cli": "^1.10.0",
         "laminas/laminas-mvc-i18n": "^1.9.0",
-        "laminas/laminas-mvc-plugins": "^1.2.0",
         "laminas/laminas-mvc-middleware": "^2.4.0",
+        "laminas/laminas-mvc-plugins": "^1.2.0",
+        "laminas/laminas-navigation": "^2.20",
+        "laminas/laminas-permissions-acl": "^2.17",
         "laminas/laminas-session": "^2.21.0",
-        "laminas/laminas-di": "^3.14.0"
+        "laminas/laminas-skeleton-installer": "^1.3.0"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
